<resources>
    <string name="app_name">Tour Guide App</string>

    <string name="vn">Hà Nội, Việt Nam</string>
    <string name="atm">ATM</string>
    <string name="atm_hoanKiem">ATM Hoàn Kiếm</string>
    <string name="dc_atmHK">17 phố Lý Thường Kiệt, Phường Phan Chu Trinh, Quận Hoàn Kiếm, Hà Nội</string>
    <string name="atm_dinhTienHoang">ATM Đinh Tiên Hoàng</string>
    <string name="dc_atmDTH">7 Đinh Tiên Hoàng, Quận Hoàn Kiếm, Hà Nội</string>
    <string name="atm_hoiSo">ATM Hội sở</string>
    <string name="dc_atmHS">57 Lý Thường Kiệt, Quận Hoàn Kiếm, Hà Nội</string>
    <string name="atm_namHaNoi">ATM Nam Hà Nội</string>
    <string name="dc_atmNHN">236 Lê Thanh Nghị, Quận Hai Bà Trưng, Hà Nội</string>
    <string name="atm_haiBaTrung">ATM Hai Bà Trưng</string>
    <string name="dc_atmHBT">300-302 Trần Khát Chân, Quận Hai Bà Trưng, Hà Nội</string>
    <string name="atm_leNgocHan">ATM Lê Ngọc Hân</string>
    <string name="dc_atmLNH">44 Lê Ngọc Hân, Quận Hai Bà Trưng, Hà Nội</string>
    <string name="atm_thangLong">ATM Thăng Long</string>
    <string name="dc_atmTL">129-131 Hoàng Quốc Việt, Quận Cầu Giấy, Hà Nội</string>
    <string name="atm_phamHung">ATM Phạm Hùng</string>
    <string name="dc_atmPH">Tòa nhà FPT Phạm Hùng, Quận Cầu Giấy, Hà Nội</string>
    <string name="atm_khamThien">ATM Khâm Thiên</string>
    <string name="dc_atmKT">158 Khâm Thiên, Quận Đống Đa, Hà Nội</string>

    <string name="bv">Bệnh Viên</string>
    <string name="bv_bachMai">Bệnh viện Bạch Mai</string>
    <string name="dc_bvBM">78 – Đường Giải Phóng – Phương Mai – Đống Đa – Hà Nội</string>
    <string name="bv_huuNghi">Bệnh Viện Hữu Nghị</string>
    <string name="dc_bvHN">Số 1 – Trần Khánh Dư – Quận Hai Bà Trưng – Hà Nội</string>
    <string name="bv_e">Bệnh Viện E, Hà Nội</string>
    <string name="dc_bvE">89 – Trần Cung – Nghĩa Tân – Cầu Giấy – Hà Nội</string>
    <string name="v_rangHamMat">Viện Răng Hàm Mặt</string>
    <string name="dc_vRHM">40B – Tràng Thi – Hoàn Kiếm – Hà Nội</string>
    <string name="bv_taiMuiHongTU">Bệnh Viện Tai Mũi Họng Trung Ương</string>
    <string name="dc_bvTMHTU">78 – Đường Giải Phóng – Quận Đống Đa – Hà Nội</string>
    <string name="bv_matTU">Bệnh Viện Mắt Trung Ương</string>
    <string name="dc_bvMTU">85 – Phố Bà Triệu – Quận Hai Bà Trưng – Hà Nội</string>
    <string name="vien_yHocCoTruyenTU">Viện Y Học Cổ Truyền Trung Ương</string>
    <string name="dc_vYHCTTU">29 – Phố Nguyễn Bỉnh Khiêm – Quận Hai Bà Trưng – Hà Nội</string>
    <string name="bv_noiTiet">Bệnh Viện Nội Tiết</string>
    <string name="dc_bvNT">80 – Thái Thịnh II – Thịnh Quang – Đống Đa – Hà Nội</string>
    <string name="bv_vietDuc">Bệnh Viện Việt Đức</string>
    <string name="dc_bvVD">8 – Phố Phủ Doãn – Quận Hoàn Kiếm – Hà Nội</string>
    <string name="bv_nhiTrungUng">Bệnh Viện Nhi Trung Ương</string>
    <string name="dc_bvNTU">18/879 – Đường La Thành – Quận Đống Đa – Hà Nội</string>

    <string name="ks">Khách Sạn</string>
    <string name="ks_tqh">The Queen Hotel &amp; Spa</string>
    <string name="dc_ksTQH">67 Thuốc Bắc, Hàng Bồ, Hàng Bồ, Quận Hoàn Kiếm, Hà Nội, Việt Nam</string>
    <string name="ks_hnh">Hanoi Nostalgia Hotel &amp; Spa</string>
    <string name="dc_ksHnh">13-15 Luong Ngoc Quyen, Hang Buom, Hoan Kiem, Hàng Buồm, Quận Hoàn Kiếm, Hà Nội, Việt Nam</string>
    <string name="ks_clh">Church Legend Hotel Hanoi</string>
    <string name="dc_ksCLH">46 Ấu Triệu, Phường Hàng Trống, Quận Hoàn Kiếm, Hà Nội, Việt Nam</string>
    <string name="ks_lhdh">Little Hanoi Diamond Hotel</string>
    <string name="dc_ksLHDH">11 Bát Đàn, Quận Hoàn Kiếm, Hàng Bồ, Quận Hoàn Kiếm, Hà Nội, Việt Nam</string>
    <string name="ks_fdlr">Flamingo Dai Lai Resort</string>
    <string name="dc_ksFDLR">Thôn Ngọc Quang, Xã Ngọc Thanh, Vĩnh Phúc, Phúc Yên, Hà Nội, Việt Nam</string>
    <string name="ks_alh">Annam Legend Hotel</string>
    <string name="dc_ksALH">27 Hàng Bè, Hàng Bạc, Quận Hoàn Kiếm, Hà Nội, Việt Nam</string>
    <string name="ks_hzh">Hanoi Zesty Hotel</string>
    <string name="dc_ksHZH">20 Hàng Cân, Hàng Đào, Quận Hoàn Kiếm, Hà Nội, Việt Nam</string>
    <string name="ks_bl">Bluebell Hotel</string>
    <string name="dc_ksBL">41 Ngõ Huyện, Phường Hàng Trống, Quận Hoàn Kiếm, Hà Nội, Việt Nam</string>

    <string name="xb">Xe Bus</string>
    <string name="tuyen_01">Tuyến 01</string>
    <string name="loTrinh_t01">BX Gia Lâm - BX Yên Nghĩa</string>
    <string name="tuyen_02">Tuyến 02</string>
    <string name="loTrinh_t02">Bác cổ - BX Yên Nghĩa</string>
    <string name="tuyen_03A">Tuyến 03A</string>
    <string name="loTrinh_t03A">BX Giáp Bát - BX Gia Lâm</string>
    <string name="tuyen_03B">Tuyến 03B</string>
    <string name="loTrinh_t03B">Bx Giáp Bát - Vincom - Phúc Lợi</string>
    <string name="tuyen_04">Tuyến 04</string>
    <string name="loTrinh_t04">Long Biên - BX Nước Ngầm</string>
    <string name="tuyen_05">Tuyến 05</string>
    <string name="loTrinh_t05">Linh Đàm - Phú Diễn</string>
    <string name="tuyen_06">Tuyến 06</string>
    <string name="loTrinh_t06">BX. Giáp Bát - Phú Minh (Phú Xuyên)</string>
    <string name="tuyen_07">Tuyến 07</string>
    <string name="loTrinh_t07">Cầu Giấy - Nội Bài</string>
    <string name="tuyen_08">Tuyến 08</string>
    <string name="loTrinh_t08">Long Biên - Đông Mỹ</string>
</resources>