<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:collapseColumns=""
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_hoanKiem"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmHK"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_dinhTienHoang"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmDTH"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_hoiSo"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmHS"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_namHaNoi"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmNHN"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_haiBaTrung"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmHBT"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_leNgocHan"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmLNH"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_phamHung"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmPH"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_100"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_220"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/atm_machine" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atm_khamThien"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_atmKT"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</ScrollView>