<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:collapseColumns=""
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_bachMai"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvBM"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_huuNghi"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvHN"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_e"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvE"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/v_rangHamMat"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_vRHM"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_taiMuiHongTU"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvTMHTU"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_matTU"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvMTU"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/v_yHocCoTruyenTU"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_vYHCTTU"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_noiTiet"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvNT"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_vietDuc"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvVD"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_300"
            android:layout_marginTop="1sp">

            <ImageView
                android:layout_width="@dimen/sp_130"
                android:layout_height="@dimen/sp_100"
                android:background="@color/white"
                android:src="@drawable/hospital" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginLeft="@dimen/sp_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bv_nhiTrungUng"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dc_bvNTU"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</ScrollView>