<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vietnam"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vn"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"/>
        </LinearLayout>
<!-- Mỗi cái nút chú đang gọi bằng hàm trực tiếp onClick, nên đổi về dùng onClickListener trong Class FragmentMenu để quản lý -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/open_activity_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:onClick="fragmentHotelClick">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hotel"
                    android:background="@color/white">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ks"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/open_activity_atm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:onClick="fragmentAtmClick">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/atm_machine"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/atm"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/open_activity_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:onClick="fragmentHospitalClick">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hospital"
                    android:background="@color/white">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/bv"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/open_activity_metro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:onClick="fragmentMetroClick">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/metro"
                    android:background="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/xb"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>